# Yamb

./: .gitignore  Bot_player.cpp  Bot_player.h  CMakeLists.txt  C_Free.cpp  C_Free.h  C_FromBottom.cpp  C_FromBottom.h  C_FromMiddle.h  C_FromUpToDown.cpp  C_FromUpToDown.h  C_Hand.cpp  C_Hand.h  C_ToMiddle.h  Column.cpp  Column.h  Dice.cpp  Dice.h  Dockerfile  F_Number.cpp  F_Number.h  Field.h  Full.cpp  Full.h  Game.h  Human_player.cpp  Human_player.h  MinMax.cpp  MinMax.h  Player.h  Poker.cpp  Poker.h  README.md  Straight.cpp  Straight.h  Three_of_a_kind.h  Ticket.cpp  Ticket.h  UML.drawio  Untitled Diagram.drawio  (+6 more)
ChatCommon/: ChatMessage.cpp  ChatMessage.hpp  ChatMessageID.hpp  ThreadSafeQueue.hpp  common.hpp
Classes/: Bot_player.cpp  Bot_player.h  C_Announcement.cpp  C_Announcement.h  C_AnnouncementRespond.cpp  C_AnnouncementRespond.h  C_Checkout.cpp  C_Checkout.h  C_Free.cpp  C_Free.h  C_FromBottom.cpp  C_FromBottom.h  C_FromMiddle.cpp  C_FromMiddle.h  C_FromUp.cpp  C_FromUp.h  C_FromUpToDown.cpp  C_FromUpToDown.h  C_Hand.cpp  C_Hand.h  C_Maximum.cpp  C_Maximum.h  C_Respond.cpp  C_Respond.h  C_ToMiddle.cpp  C_ToMiddle.h  Column.cpp  Column.h  Dice.cpp  Dice.h  F_Number.cpp  F_Number.h  Field.h  Full.cpp  Full.h  Game.cpp  Game.h  Human_player.cpp  Human_player.h  MinMax.cpp  (+13 more)
GUI/: ClientConnection.h  Dice.cpp  Dice.h  EndGameWindow.cpp  EndGameWindow.h  EndGameWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Message.h  RandomGenerator.h  StartWindow.cpp  StartWindow.h  StartWindow.ui  WaitingWindow.cpp  WaitingWindow.h  WaitingWindow.ui  Yamb.pro  common.h  main.cpp  resource.qrc
GameLogic/: Bot_player.cpp  C_Announcement.cpp  C_Free.cpp  C_FromBottom.cpp  C_FromBottom.h  C_FromMiddle.cpp  C_FromUp.cpp  C_Maximum.cpp  C_Respond.cpp  C_ToMiddle.cpp  Column.cpp  F_Number.cpp  Field.h  Game.h  Human_player.cpp  MinMax.cpp  Straight.h  ThreeOfAKind.h  Ticket.cpp
NetworkClient/: ClientConnection.h  Connection.cpp  Connection.h  Makefile  NetworkClient.vcxproj  client  main.cpp
NetworkCommon/: Message.h  Message.hpp  NetworkCommon.vcxproj  NetworkCommon.vcxproj.filters  RandomGenerator.h  RandomGenerator.hpp  ThreadSafeQueue.h  ThreadSafeQueue.hpp  common.h  common.hpp
NetworkServer/: CMakeLists.txt  ConnectionParticipant.cpp  ConnectionParticipant.h  ConnectionRoom.cpp  ConnectionRoom.h  ConnectionServer.cpp  ConnectionServer.h  ConnectionSession.cpp  ConnectionSession.h  DeliverType.h  Makefile  Network.sln  NetworkServer.vcxproj  main.cpp  server
build-Yamb-Desktop_Qt_5_15_0_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_MainWindow.h  ui_StartWindow.h
build-Yamb-Desktop_Qt_5_15_0_MinGW_64_bit-Debug/debug/: moc_MainWindow.cpp  moc_StartWindow.cpp  qrc_resource.cpp
code/: Dockerfile
code/GameLogic/: Bot_player.cpp  Bot_player.h  C_Announcement.cpp  C_Announcement.h  C_Checkout.cpp  C_Checkout.h  C_Free.cpp  C_Free.h  C_FromBottom.cpp  C_FromBottom.h  C_FromMiddle.cpp  C_FromMiddle.h  C_FromUp.cpp  C_FromUp.h  C_Hand.cpp  C_Hand.h  C_Maximum.cpp  C_Maximum.h  C_Respond.cpp  C_Respond.h  C_ToMiddle.cpp  C_ToMiddle.h  Column.cpp  Column.h  Dice.cpp  Dice.h  F_Number.cpp  F_Number.h  Field.h  Full.cpp  Full.h  Game.cpp  Game.h  Human_player.cpp  Human_player.h  MinMax.cpp  MinMax.h  Player.h  Poker.cpp  Poker.h  (+8 more)
code/NetworkClient/: Connection.cpp  Connection.h
code/NetworkCommon/: Message.h  RandomGenerator.h  common.h
code/NetworkServer/: DeliverType.h  (+5 more)
resources/: resource.qrc
(+10 files in other folders)
